@startuml
!include style.puml

hide member
package Component {
class "{abstract}\nComponent" as Comp
class "{abstract}\nLoadComponent" as Load
class "VoltageSource" as Volt
class "Resistor" as Resist
class "Capacitor" as Cap
class "Inductor" as Ind
}
package Template {
class "{abstract}\nCircuitTemplate" as Circ
class "RTemplate" as RTemp
class "LcTemplate" as LcTemp
class "LrTemplate" as LrTemp
class "RcTemplate" as RcTemp
}

Load -u-|> Comp
Volt -u-|> Comp
Resist -u-|> Load
Cap -u-|> Load
Ind -u-|> Load

RTemp -u-|> Circ
LcTemp -u-|> Circ
LrTemp -u-|> RTemp
RcTemp -u-|> RTemp

Circ -r-> "1..3" Comp


@enduml